--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "app-container": "adamspe/app-container",
     "minimist": "^1.2.0",
-    "mongoose-geojson-schema": "^2.1.2"
+    "mongoose-geojson-schema": "^2.1.2",
+    "ndjson": "^1.5.0",
+    "prompt": "^1.0.0"
   },
   "devDependencies": {
     "app-container-login": "adamspe/app-container-login",
