--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "minimist": "^1.2.0",
     "mongoose-geojson-schema": "^2.1.2",
     "ndjson": "^1.5.0",
-    "prompt": "^1.0.0"
+    "prompt": "^1.0.0",
+    "fs-extra": "^2.0.0",
+    "node-find-files": "0.0.4",
+    "shapefile": "^0.5.10",
+    "unzip": "^0.1.11"
   },
   "devDependencies": {
     "app-container-login": "adamspe/app-container-login",
