--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "app-container": "adamspe/app-container",
+    "file-resource-container": "github:adamspe/file-resource-container",
+    "fs-extra": "^2.0.0",
     "minimist": "^1.2.0",
     "mongoose-geojson-schema": "^2.1.2",
     "ndjson": "^1.5.0",
-    "prompt": "^1.0.0",
-    "fs-extra": "^2.0.0",
     "node-find-files": "0.0.4",
+    "path": "^0.12.7",
+    "prompt": "^1.0.0",
     "shapefile": "^0.5.10",
     "unzip": "^0.1.11"
   },
