--- a/angular/package.json
+++ b/angular/package.json
@@ -15,6 +15,7 @@
     "matchdep": "^1.0.1"
   },
   "dependencies": {
-    "sprintf-js": "^1.0.3"
+    "sprintf-js": "^1.0.3",
+    "topojson": "^2.2.0"
   }
 }
